fix iphone, align vertically on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,12 +4,21 @@
     grid-template-columns: repeat(6, 1fr);
     height: 100%;
     place-content: center;
+    padding: 20px;
 }
 
 .text {
     place-self: center;
-    font-size: 3cqw;
+    font-size: calc(1em + 1vw);
     color: var(--brown);
+}
+
+@supports (font-size: 3cqw) {
+    .text {
+        place-self: center;
+        font-size: 3cqw;
+        color: var(--brown);
+    }
 }
 
 .architectureText {
@@ -22,4 +31,39 @@
 
 .logo {
     grid-area: logo;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+    .mainLayout {
+        display: grid;
+        grid-template-columns: none;
+        grid-template-areas: 
+            "text1" 
+            "." 
+            "logo" 
+            "logo" 
+            "." 
+            "text2";
+        grid-template-rows: repeat(6, 1fr);
+        height: 100%;
+        place-content: center;
+        padding: 20px;
+    }
+
+    .text {
+        place-self: center;
+        font-size: calc(1em + 1vh);
+        color: var(--brown);
+    }
+
+    @supports (font-size: 3cqh) {
+        .text {
+            place-self: center;
+            font-size: 3cqh;
+            color: var(--brown);
+        }
+    }
+
 }
